<resources>
    <string name="app_name">Roko Express</string>
    <string name="loading">Loading…</string>
    <string name="razor_pay_key_secret">L7UUycdInTnFFhFkNc4lYeoJ</string>
    <string name="razor_pay_key_id">rzp_test_3Fhl93MbIZIJso</string>
    <!--<string name="google_directions_key">AIzaSyCWvJDKVUfvFqUN9sIC3bpFieR89wz1_Hg</string>-->
    <string name="google_directions_key">AIzaSyDdzo7x0TTwv8HOyBKg359MBeR1s1kRLZ8</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="login_if_you_have_an_account">Login if you already have an <b>Roko</b> account</string>
    <string name="email_id">Enter Email / Mobile</string>
    <string name="password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">SignUp Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="already_member_login_here">Already member? <b>Login Here</b></string>
    <string name="sign_up">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Your Full Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="or">OR</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_share">Refer &amp; Earn</string>
    <string name="my_trip">My Trips</string>
    <string name="my_pass">My Pass</string>
    <string name="book_ride">Book Your Ride</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_google_map">Map</string>
    <string name="searchText">Search for the Roko stop…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_home_location">Select home location</string>
    <string name="select_office_location">Select office location</string>
    <string name="find_a_route">Find a route</string>
    <string name="pass_list">Passes List</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="email">Enter Email</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="title_activity_track_my_bus">Map</string>
    <string name="buy_now">Buy Now</string>
    <string name="sos">SOS</string>
    <string name="add_your_sos">Add Your SOS</string>
    <string name="manage_phone_call_permission"><![CDATA[<html>
                    <body style="text-align:justify;color:black;">
                    We are taking your permission to <b>make and manage phone calls</b> to
                    make sure that our offers and benefits given to you, should reach to you directly.
                    </body></html>]]>
    </string>
    <string name="access_contact_permission"><![CDATA[<html>
                    <body style="text-align:justify;color:black;">
                    We are taking your permission to <b>access your contacts</b> to
                    make sure that in any emergency, you can use <b>SOS Feature</b> and be in touch with your family.
                    </body></html>]]>
    </string>
    <string name="access_sms_permission"><![CDATA[<html>
                    <body style="text-align:justify;color:black;">
                    We are taking your permission to <b>send and view sms</b> to
                    make sure that you can use payment gateway much comfortably.
                    </body></html>]]>
    </string>
    <string name="access_location_permission"><![CDATA[<html>
                    <body style="text-align:justify;color:black;">
                    We are taking your permission to <b>access this device\'s location</b> to
                    make sure that we can provide you service from your nearest stop.
                    </body></html>]]>
    </string>
    <string name="camera_permission"><![CDATA[<html>
                    <body style="text-align:justify;color:black;">
                    We are taking your permission to <b>access device\'s camera</b> to
                    scan the QR CODE at the time of starting your ride.
                    </body></html>]]>
    </string>
    <string name="next">Next</string>
    <string name="email_hint">Email</string>
    <string name="birth_day">Birthday</string>
    <string name="gender_hint">Gender</string>
    <string name="what_is_pass">What is pass?</string>
    <string name="pass_desc"><![CDATA[<html>
                    <body style="text-align:justify;color:black;">

                    </body></html>]]>
    </string>
    <string name="purchase_pass_desc"><![CDATA[<html>
                   <body style="text-align:justify;">
                   You can search for a new route on the home screen and purchase a
                   pass start your ride with <b> Roko Express</b>.</html>]]>
    </string>
    <string name="what_is_pass_desc"><![CDATA[<html>
                   <body style="text-align:justify;">
                   A Roko pass is a pack of rides that offer greater value at a lower cost.
                   A variety of passes are available for you to choose from.</html>]]>
    </string>
    <string name="select_pass_for_route_desc"><![CDATA[<html>
                   <body style="text-align:justify;">
                   The pass that you buy can only be used on the route selected by you.
                   That includes the route between your designated pickup and drop stop..</html>]]>
    </string>
    <string name="number_of_rides_in_each_pass"><![CDATA[<html>
                   <body style="text-align:justify;">
                   The Roko pass you purchase will include a fixed number of rides
                   which you can use within the pass validity.</html>]]>
    </string>
    <string name="usage_of_rides"><![CDATA[<html>
                   <body style="text-align:justify;">
                   When you take a ride on a specific route, one ride will be deducted from the pass.
                   If you take a ride to your office in the morning and another ride in the evening,
                   2 rides will be deducted from the pass.</html>]]>
    </string>
    <string name="notifications">Notifications</string>
    <string name="welcome_to_roko_express">Welcome to <b>Roko Express</b></string>
    <string name="error_message_mobile_empty">Mobile number should not be empty.</string>
    <string name="error_message_mobile_not_valid">Mobile number should be valid 10 digit number.</string>
    <string name="welcome_back_user">Welcome user, <b>Enter Verification Code</b> below to continue</string>
    <string name="error_message_otp_empty">Enter Valid 6 digit OTP</string>
    <string name="rental">Rental</string>

    <string name="firebase_path">https://roko-express.firebaseio.com/</string>
    <string name="transport_id">220</string>
    <string name="notification_text">Roko is tracking Notification</string>
    <string name="scan">Scan to Start Trip</string>
    <string name="we_need_mobile_num">We need your mobile number to book a ride</string>
    <string name="agreeing">By registering, you are agreeing to our</string>
    <string name="term_and_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="referral_code">Referral Code</string>
    <string name="apply_here">Apply Here</string>
    <string name="got_referral_code">Got Referral Code?</string>
    <string name="create_account">Create Account</string>
    <string name="error_message_name">Name shouldn\'t be empty.</string>
    <string name="error_message_email_empty">Email shouldn\'t be empty.</string>
    <string name="error_message_email_valid">Email should be valid.</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="dont_have_pass">You don\'t have any active \n pass.</string>
    <string name="oops">Oops! :(</string>
    <string name="remark">Leave your valuable feedback (Optional)</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="suggest_route">Suggest New Route</string>
    <string name="select_origin_point">Select Origin Point</string>
    <string name="select_destination_point">Select Destination Point</string>
    <string name="time_you_leave_home">Time you leave home</string>
    <string name="time_you_leave_office">Time you leave office</string>
    <string name="your_preferred_time_slots">Your Preferred Time Slots</string>
    <string name="_1_morning_slot">1. Morning Slot</string>
    <string name="_2_evening_slot">2. Evening Slot</string>
    <string name="suggest_for_route">Suggest For Route</string>
    <string name="suggest_new_route">Suggest New Route</string>
    <string name="invite">INVITE</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="my_coupons">My Coupons</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="route_map">Route Map</string>
</resources>
